--- a/src/index.css
+++ b/src/index.css
@@ -18,5 +18,5 @@ body {
 }
 
 #root {
-    @apply min-h-screen flex items-center justify-center m-0 bg-white;
+    @apply min-h-screen m-0 bg-white;
 }
